# tweekit-mcp

./: .env.example  .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  INTEGRATION_ROADMAP.md  LICENSE  MANIFEST.in  README.md  claude-api-setup.sh  firebase.json  plugin_proxy.py  prod.yaml  pyproject.toml  server.json  server.py  stage.yaml  test.docx  test_server.py
.github/workflows/: build-claude-bundle.yml  discord_pr.yml  publish-mcp.yml  publish-pypi.yml
.idx/: dev.nix
claude/: README.md  manifest.json
clients/: __init__.py
clients/python/: __init__.py  tweekit_client.py
configs/: codex-mcp.yaml  continue-mcp.json  cursor-mcp.json  inspector-mcp.json
docs/: backlog.md  chatgpt-plugin.md  claude-bundle.md  claude-submission-checklist.md  deepseek-integration.md  developer-tools.md  grok-integration.md  mcp-directories.md  mcp-pulse-checklist.md  quickstarts.md  testing.md
examples/node/: quickstart.mjs
examples/python/: quickstart.py
examples/web-converter/: README.md  index.html
functions/: main.py  requirements.txt
scripts/: build_claude_bundle.py  bump_version.py  configure_claude_desktop.py  deepseek_mcp_bridge.py  deploy_cloud_run.sh  deploy_firebase.sh  install.sh  launch-converter.sh  run_full_e2e_test.py  run_mcp_e2e.py  start_services.sh
tests/: conftest.py  test_chatgpt_proxy_live.py  test_claude_bundle.py  test_configs.py  test_credential_resolution.py  test_delete_document.py  test_fetch_tool.py  test_plugin_proxy.py  test_server_tools.py  test_tweekit_client.py
